# kg_snapshot

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  HANDOFF.md  README.md  SNAPSHOTS.md  pyproject.toml
.codekg/snapshots/: manifest.json
.dockg/snapshots/: manifest.json
.github/workflows/: ci.yml  publish.yml
scripts/: install-hooks.sh  pre-commit-hook  run_tests.sh
src/kg_snapshot/: __init__.py  snapshots.py
tests/: test_snapshot_base.py
