# kg-snapshot — Shared Snapshot Infrastructure for KG Modules
#
# Zero-dependency snapshot engine: Snapshot, SnapshotManifest, SnapshotManager.
# Extracted from kg-rag so domain KG packages (code-kg, doc-kg, etc.) can
# subclass SnapshotManager without taking a hard dependency on kg-rag.
#
# Author: Eric G. Suchanek, PhD

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kg-snapshot"
version = "0.2.0"
description = "Shared snapshot infrastructure for KG modules — zero stdlib-only deps."
authors = ["Eric G. Suchanek, PhD <suchanek@mac.com>"]
license = "Elastic-2.0"
readme = "README.md"
homepage = "https://github.com/Flux-Frontiers/kg_snapshot"
repository = "https://github.com/Flux-Frontiers/kg_snapshot"
keywords = ["knowledge-graph", "snapshot", "kgrag"]
packages = [
  { include = "kg_snapshot", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
pre-commit = "^4.5.1"
detect-secrets = "^1.5.0"
pylint = "^4.0.5"
pdoc = ">=14.0.0"
code-kg = {git = "https://github.com/Flux-Frontiers/code_kg.git"}
doc-kg = {git = "https://github.com/Flux-Frontiers/doc_kg.git"}

[tool.pylint.messages_control]
disable = ["all"]
enable = [
    "cyclic-import",           # R0401
    "broad-exception-caught",  # W0718
    "cell-var-from-loop",      # W0640
    "undefined-variable",      # E0602
    "import-outside-toplevel", # C0415
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
